# ipc_with_boost

./: CMakeLists.txt  README.md  killchild.bat
src/: SharedStruct.h  child.cpp  parent.cpp
